[package]
authors = ["Robert Collins <robertc@robertcollins.net>"]
edition = "2018"
license = "unlicense"
name = "tar-demo"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
flate2 = "1.0.16"
remove_dir_all = "0.5.3"
tar = "0.4.29"
threadpool = "1.8.1"
